# ful

./: Anchor.toml  BACKEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  README.md  SKILL.md
backend/: .env.example  .gitignore  BATTLE_ENGINE_IMPLEMENTATION.md  README.md  TEST_WEBHOOKS.md  package.json
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/config/: database.ts  logger.ts
backend/src/controllers/: battle.controller.ts  helius.controller.ts  leaderboard.controller.ts  webhook.controller.ts
backend/src/services/: battle-engine.ts  battle-entry.ts  leaderboard-service.ts  live-purchases.ts  reward-service.ts  timer-service.ts  trade-listener.ts
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: battle-arena.tsx  gladiator-character.tsx  how-it-works.tsx  leaderboard.tsx  live-feed.tsx  lobby-countdown.tsx
frontend/src/hooks/: use-battle-simulation.ts  useBattleSocket.ts
programs/battle-royale/: Cargo.toml
programs/battle-royale/src/: lib.rs
