[package]
name = "battle-royale"
version = "0.1.0"
description = "Pumped Out Fund — on-chain battle royale tournament with SOL rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_royale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
